--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -224,6 +224,47 @@
     border-radius: 12px;
 }
 
+/***** Why Choose us *****/
+.py-100 {
+    padding-top: 100px;
+    padding-bottom: 100px;
+}
+
+.mb-32 {
+    margin-bottom: 32px;
+}
+
+.mb-12 {
+    margin-bottom: 12px;
+}
+
+.mb-36 {
+    margin-bottom: 36px;
+}
+
+.gap-20 {
+    gap: 20px;
+}
+
+.max-w-590 {
+    max-width: 590px;
+}
+
+.circle-box {
+    width: 62px;
+    height: 62px;
+    border-radius: 10px;
+    background: #B400011A;
+}
+
+.max-w-370 {
+    max-width: 370px;
+}
+
+.max-w-549 {
+    max-width: 549px;
+}
+
 @media (max-width:991.98px) {
     .nav-link {
         display: flex !important;
@@ -245,6 +286,10 @@
     }
 
     .lh-80 {
+        line-height: normal;
+    }
+
+    .lh-70 {
         line-height: normal;
     }
 }
