--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -265,6 +265,24 @@
     max-width: 549px;
 }
 
+/***** Our Blog *****/
+.py-140 {
+    padding-top: 140px;
+    padding-bottom: 140px;
+}
+
+.max-w-592 {
+    max-width: 592px;
+}
+
+.blog-img-card {
+    max-width: 364px !important;
+    background: var(--color-white);
+    box-shadow: 0px 0px 12px 3px #B6B6B640;
+    border-radius: 24px;
+    padding: 24px;
+}
+
 @media (max-width:991.98px) {
     .nav-link {
         display: flex !important;
