--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -186,8 +186,8 @@
 }
 
 /***** What we do *****/
-.pt-174 {
-    padding-top: 174px;
+.mb-174 {
+    margin-bottom: 174px;
 }
 
 .pb-140 {
@@ -270,6 +270,11 @@
     padding-top: 140px;
     padding-bottom: 140px;
 }
+
+.pb-140{
+    padding-bottom: 140px;
+}
+
 
 .max-w-592 {
     max-width: 592px;
