--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -354,6 +354,44 @@
     gap: 12px;
 }
 
+/***** footer *****/
+.gap-8 {
+    gap: 8px;
+}
+
+.footer-link-circle {
+    width: 32px;
+    height: 32px;
+    border-radius: 50px;
+}
+
+.footer-input {
+    width: 340px;
+    border-radius: 62px;
+    border: 1px solid #00000026;
+    box-shadow: -13.01px 13.01px 104.09px 0px #A1A1A11A;
+    padding: 23px 10px 23px 25px;
+}
+
+.footer-btn {
+    padding: 15.44px 41px 16.53px 40px;
+    border-radius: 62px;
+    right: 10px !important;
+    top: 8.14px;
+}
+
+.line::before {
+    content: "";
+    position: absolute;
+    inset: 0;
+    padding: 1px;
+    background: linear-gradient(90deg, rgba(22, 22, 22, 0) 0%, #696969 51.56%, rgba(22, 22, 22, 0) 100%);
+    mask:
+        linear-gradient(#000 0 0) content-box,
+        linear-gradient(#000 0 0);
+    mask-composite: exclude;
+}
+
 @media (max-width:991.98px) {
     .nav-link {
         display: flex !important;
@@ -380,5 +418,18 @@
 
     .lh-70 {
         line-height: normal;
+    }
+}
+
+@media (min-width:576px) {
+    .footer-btn {
+        position: absolute;
+    }
+}
+
+@media (max-width:575.98px) {
+    .footer-input {
+        width: 100%;
+        max-width: 340px;
     }
 }
