--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -234,6 +234,10 @@
     margin-bottom: 32px;
 }
 
+.mb-140 {
+    margin-bottom: 140px;
+}
+
 .mb-12 {
     margin-bottom: 12px;
 }
@@ -263,6 +267,30 @@
 
 .max-w-549 {
     max-width: 549px;
+}
+
+/***** How it works *****/
+.section-5-card {
+    max-width: 592px;
+    width: 100%;
+    border-radius: 24px;
+    padding: 16px;
+    background: #FFFFFF;
+    box-shadow: 0px 1px 28px 1px #4747471A;
+}
+
+.pl-52 {
+    padding-left: 52px;
+}
+
+.view-btn {
+    padding: 20px 32px;
+    border-radius: 56px;
+    border: 1px solid var(--color-red);
+}
+
+.max-w-485 {
+    max-width: 485px;
 }
 
 /***** Our Blog *****/
@@ -396,7 +424,7 @@
     .nav-link {
         display: flex !important;
         flex-direction: column;
-        backdrop-filter: blur(60px);
+        background-color: var(--color-white) !important;
         width: 100%;
         min-height: 100vh;
         position: fixed;
