--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -293,6 +293,22 @@
     max-width: 485px;
 }
 
+/***** Interested *****/
+.red-box {
+    background-image: url(../images/png/red-box-img.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-radius: 24px;
+    padding-bottom: 64px;
+    padding-top: 64px;
+}
+
+.red-overlay {
+    background: #FF0000;
+    opacity: 75%;
+    border-radius: 24px;
+}
+
 /***** Our Blog *****/
 .py-140 {
     padding-top: 140px;
