What Our Customers Say section done

--- a/assets/css/root.css
+++ b/assets/css/root.css
@@ -12,6 +12,16 @@
     --color-Vantablack: #010101;
     --washed-black: #1B2228;
     --color-light-grey: #81848A;
+    --border-sooty: #14141426;
+    --light-black: #0000001F;
+    --color-wolfram: #B6B6B640;
+    --shadow-mountain: #5757571A;
+    --black-tie: #4747471A;
+    --artful-red: #B400011A;
+    --ballet-red:#F8D4D4;
+    --ai-grey:#A1A1A11A;
+    --dim-grey:#696969;
+    --light-black-2:#00000026;
     /***** font-size *****/
     --fs-sm: 12px;
     --fs-base: 14px;
