--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap');
 
-.max-w-1140 {
+.max-w-1164 {
     max-width: 1164px !important;
 }
 
@@ -38,16 +38,6 @@
 
 .gap-28 {
     gap: 28px;
-}
-
-.py-16 {
-    padding-top: 16px;
-    padding-bottom: 16px;
-}
-
-.py-24 {
-    padding-top: 24px;
-    padding-bottom: 24px;
 }
 
 .nav-btn-box {
@@ -202,10 +192,6 @@
     margin-bottom: 56px;
 }
 
-.gap-10 {
-    gap: 10px;
-}
-
 .img-card {
     max-width: 364px;
     border-radius: 24px;
@@ -236,14 +222,6 @@
 
 .mb-140 {
     margin-bottom: 140px;
-}
-
-.mb-12 {
-    margin-bottom: 12px;
-}
-
-.mb-36 {
-    margin-bottom: 36px;
 }
 
 .gap-20 {
@@ -329,15 +307,6 @@
 }
 
 /***** Our Blog *****/
-.py-140 {
-    padding-top: 140px;
-    padding-bottom: 140px;
-}
-
-.pb-140 {
-    padding-bottom: 140px;
-}
-
 .max-w-592 {
     max-width: 592px;
 }
@@ -455,6 +424,7 @@
     mask-composite: exclude;
 }
 
+/* max-width */
 @media (max-width:991.98px) {
     .nav-link {
         display: flex !important;
@@ -484,15 +454,16 @@
     }
 }
 
-@media (min-width:576px) {
-    .footer-btn {
-        position: absolute;
-    }
-}
-
 @media (max-width:575.98px) {
     .footer-input {
         width: 100%;
         max-width: 340px;
+    }
+}
+
+/* min width */
+@media (min-width:576px) {
+    .footer-btn {
+        position: absolute;
     }
 }
